--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 :root {
   --color-primary: #4db6ac;
   --color-contrast: #282c34;
+  --border-radius: 0.5rem;
 }
 
 body {
   margin: 0;
   padding: 0;
 }
-
